Fixed alignment issues

--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,9 @@
 
 	h1 , h1 a {
 		font-size: 36px !important;
-		margin-left: 2%;
+		margin-left: 0%;
+		margin-top: 1%;
+		text-align: center;
 	}
 	
 	h2 , h2 a {
@@ -60,14 +62,14 @@
 	}
 
   /* Main buttons color */
-  .readmore a {
+  .goToLink a {
      background-color: #38b49d;
   }
 
   /*
     button hover color
   */
-  .readmore a:hover {
+  .goToLink a:hover {
     background-color: #dadada;
     border-bottom-color: #c1c0c0;
   }
@@ -83,44 +85,75 @@
 
 /* Post content */
 
-section.apps .single-post > .post-content .post-inner-content {
-  float: left;
-  clear: both;
-  width: 76%;
-  padding-left: 8%;
-  padding-right: 8%;
-  margin-left: 4%;
-  padding-top: 45px;
+section.apps {
+  padding-top: 50px;
   padding-bottom: 45px;
-  background: #fff;
-  border-right: 1px solid #E9E9E9;
-  border-left: 1px solid #E9E9E9;
-  border-bottom: 1px solid #E9E9E9;
-  border-radius: 0 0 6px 6px;
-  -webkit-border-radius: 0 0 6px 6px;
+  
 }
+
+section.apps.single-apps-page {
+  padding-top: 30px;
+
+}
+
+section.apps > .container > .row >  .single-post {
+  margin-bottom: 100px;
+  clear: both;
+  float: left;
+  width: 100%;
+}
+
+section.apps > .container > .row > .single-post:last-child {
+  margin-bottom: 0px;
+}
+
+
+/* Post Image */
+section.apps .single-post > .post-image {
+    border-radius: 4px;
+    overflow: hidden;
+}
+
+/* Post content */
+
+section.apps .single-post > .post-content .post-inner-content {float: left;
+clear: both;
+width: 76%;
+padding-left: 8%;
+padding-right: 8%;
+margin-left: 4%;
+padding-top: 45px;
+padding-bottom: 45px;
+background: #fff;
+border-right: 1px solid #E9E9E9;
+border-left: 1px solid #E9E9E9;
+border-bottom: 1px solid #E9E9E9;
+border-radius: 0 0 6px 6px;
+
+-webkit-border-radius: 0 0 6px 6px;}
+
 
 .single-post .post-inner-content .main-content p , 
 .single-post .post-inner-content .main-content a,
 .single-post .post-inner-content .main-content span,
 .single-post .post-inner-content .main-content blockquote , .apps.single-page .post-inner-content p ,
-.apps.single-page .post-inner-content span, .apps.single-page .post-inner-content blockquote , .apps.single-page .post-inner-content ul li{
+.apps.single-page .post-inner-content span, .apps.single-page .post-inner-content blockquote , .apps.single-page .post-inner-content ul li {
   line-height: 26px;
 }
 
-.single-post h2.post-header, h1 {
+.single-post h2.post-header {
   width: 100%;
   text-align: center;
   margin-bottom: 26px;
 }
 
-.single-post {
+.single-post .post-meta {
   width: 100%;
   text-align: center;
   margin-bottom: 26px;
 }
 
-.single-post span {
+.single-post .post-meta span {
   color: #c1c0c0;
   padding-left: 25px;
   margin-right: 30px;
@@ -128,7 +161,7 @@ section.apps .single-post > .post-content .post-inner-content {
 
 }
 
-.readmore {
+.goToLink {
   clear: both;
   width: 100%;
   text-align: center;
@@ -136,7 +169,7 @@ section.apps .single-post > .post-content .post-inner-content {
   margin-bottom: 25px;
 }
 
-.readmore a {
+.goToLink a {
   color: #fff;
   font-weight: 700;
   text-transform: uppercase;
@@ -147,44 +180,35 @@ section.apps .single-post > .post-content .post-inner-content {
  
 }
 
-.readmore a:hover {
-	color: #fff !important;
+.goToLink a:hover {
+    color: #fff !important;
 }
 
-.imageFloat {
-  float: left;
-  margin-right: 25px;
-  margin-bottom: 20px;
+/*
+    post content
+*/
+span.highlight {
+  color: #fff;
 }
 
-.single-post-main-content {
-  padding-bottom: 35px;
-  border-bottom: 2px solid #e9e9e9;
-  clear: both;
-  float: left;
-}
 
 /* -------------------------------------------------------------- 
  Footer
 -------------------------------------------------------------- */
-footer {
+#copyright, footer {
   text-align: center;
 }
 
-footer .copyrights p {
-  line-height: 36px;
-}
-
 footer .copyrights {
-  margin-bottom: 45px;
-  margin-top: 0px;
+  margin-top: 10px;
   clear: both;
-  width: 90%;
-  margin-left: 5%;
+  width: 100%;
+  margin-bottom: 30px;
+  /*margin-left: 5%;*/
 }
 
 footer .social-icons {
-  margin-top: 45px;
+  margin-top: 0px;
   width: 100%;
   margin-bottom: 35px;
 }
@@ -213,7 +237,7 @@ footer .social-icons a {
 }
 
 .social-icons a:last-child {
-    margin-right: 0px;
+  margin-right: 0px;
 }
 
 .social-icons a.facebook {
